--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -10,33 +10,42 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+<div class="row">
+<div class="col">
+  <div class="form-group">
     <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-  </div>
-
-  <div class="field">
+    <%= form.text_field :first_name, class:"form-control" %>
+  </div></div>
+<div class="col">
+  <div class="form-group">
     <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
+    <%= form.text_field :last_name, class:"form-control" %>
+  </div></div>
+</div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group row">
+  <div class="col">
     <%= form.label :phone %>
-    <%= form.text_field :phone %>
+    <%= form.text_field :phone, class:"form-control" %>
   </div>
+<div class="col" style="padding:23px">
+    <div class="input-group date">
+    <%= form.label :birth_date, class:" col-sm-2 col-form-label" %>
+    <%= form.date_select :birth_date%>
+  </div>
+</div>
+</div>
 
-  <div class="field">
-    <%= form.label :birth_date %>
-    <%= form.date_select :birth_date %>
+  <div class="form-group">
+    <%= form.number_field :user_id, id: :friend_user_id, value:current_user.id, type: :hidden %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"btn btn-success" %>
   </div>
 <% end %>
