--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<h1>Friends</h1>
+<h1>My Friends</h1>
 
 <table class="table table-bordered table-hover">
   <thead class="table-dark">
@@ -16,6 +16,7 @@
 
   <tbody>
     <% @friends.each do |friend| %>
+      <% if friend.user_id == current_user.id %>
       <tr>
         <td><%= friend.first_name %></td>
         <td><%= friend.last_name %></td>
@@ -26,6 +27,7 @@
         <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
         <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
