--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,12 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+      <% if user_signed_in? %>
+      <%= link_to '+ Know More', home_about_path, class:"btn btn-primary btn-lg px-4 me-sm-3" %>
+      <% else %>
       <%= link_to 'Log In', new_user_session_path, class:"btn btn-primary btn-lg px-4 me-sm-3" %>
       <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-outline-secondary btn-lg px-4" %>
+      <% end %>
       </div>
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
