seeting up production

--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,5 +1,6 @@
+<br/>
 <% if resource.errors.any? %>
-  <div id="error_explanation">
+  <div id="error_explanation" class="alert alert-danger">
     <h2>
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
